[gd_scene load_steps=9 format=3 uid="uid://db41mnxto4t0i"]

[ext_resource type="Script" path="res://char_creator_5e/char_creator.gd" id="1_b6778"]
[ext_resource type="PackedScene" uid="uid://b7ese1o60fiwj" path="res://player.tscn" id="2_8i46k"]
[ext_resource type="Script" path="res://char_creator_5e/char_creator_ui.gd" id="3_xt3ot"]
[ext_resource type="ButtonGroup" uid="uid://5b5kuflhm88" path="res://char_creator_5e/race_bg.tres" id="4_uj8wo"]
[ext_resource type="ButtonGroup" uid="uid://b3gl5ugaqie8x" path="res://char_creator_5e/class_bg.tres" id="5_mwu68"]
[ext_resource type="ButtonGroup" uid="uid://u0yfr45mhgp2" path="res://char_creator_5e/background_bg.tres" id="6_lvp53"]

[sub_resource type="BoxShape3D" id="BoxShape3D_kwrdj"]
size = Vector3(20, 1, 20)

[sub_resource type="BoxMesh" id="BoxMesh_famp8"]

[node name="Character Creator" type="Node3D"]
script = ExtResource("1_b6778")

[node name="Ground" type="StaticBody3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Ground"]
shape = SubResource("BoxShape3D_kwrdj")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Ground"]
transform = Transform3D(20, 0, 0, 0, 1, 0, 0, 0, 20, 0, 0, 0)
mesh = SubResource("BoxMesh_famp8")

[node name="Player" parent="." instance=ExtResource("2_8i46k")]
transform = Transform3D(0.671229, 0, -0.74125, 0, 1, 0, 0.74125, 0, 0.671229, 1.30956, 0.492664, 0)

[node name="Pivot" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.93082, 0.365478, 0, -0.365478, 0.93082, 0, 0, 0)

[node name="Camera3D" type="Camera3D" parent="Pivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.075, 1.115, 3.454)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.5, 0.866025, 0, -0.866025, 0.5, 0, 9.53266, 4)

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_xt3ot")

[node name="Grid" type="GridContainer" parent="UI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
columns = 3

[node name="RacePanel" type="Panel" parent="UI/Grid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="UI/Grid/RacePanel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.065
offset_top = 18.0
offset_bottom = -0.120007
grow_horizontal = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Choose your Race"
horizontal_alignment = 1

[node name="Grid" type="GridContainer" parent="UI/Grid/RacePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 9.0
offset_top = 51.0
offset_right = -6.0
offset_bottom = -11.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
columns = 3

[node name="DwarfButton" type="Button" parent="UI/Grid/RacePanel/Grid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = true
button_group = ExtResource("4_uj8wo")
text = "Dwarf"

[node name="ElfButton" type="Button" parent="UI/Grid/RacePanel/Grid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = true
button_group = ExtResource("4_uj8wo")
text = "Elf"

[node name="HalflingButton" type="Button" parent="UI/Grid/RacePanel/Grid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = true
button_group = ExtResource("4_uj8wo")
text = "Halfling"

[node name="HumanButton" type="Button" parent="UI/Grid/RacePanel/Grid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = true
button_group = ExtResource("4_uj8wo")
text = "Human"

[node name="DragonbornButton" type="Button" parent="UI/Grid/RacePanel/Grid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = true
button_group = ExtResource("4_uj8wo")
text = "Dragonborn"

[node name="GnomeButton" type="Button" parent="UI/Grid/RacePanel/Grid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = true
button_group = ExtResource("4_uj8wo")
text = "Gnome"

[node name="HalfElfButton" type="Button" parent="UI/Grid/RacePanel/Grid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = true
button_group = ExtResource("4_uj8wo")
text = "Half-Elf"

[node name="HalfOrcButton" type="Button" parent="UI/Grid/RacePanel/Grid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = true
button_group = ExtResource("4_uj8wo")
text = "Half-Orc"

[node name="TieflingButton" type="Button" parent="UI/Grid/RacePanel/Grid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = true
button_group = ExtResource("4_uj8wo")
text = "Tiefling"

[node name="ClassPanel" type="Panel" parent="UI/Grid"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="UI/Grid/ClassPanel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.065
offset_top = 18.0
offset_bottom = -0.120007
grow_horizontal = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Choose your Class"
horizontal_alignment = 1

[node name="Grid" type="GridContainer" parent="UI/Grid/ClassPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 9.0
offset_top = 51.0
offset_right = -6.0
offset_bottom = -11.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
columns = 3

[node name="BarbarianButton" type="Button" parent="UI/Grid/ClassPanel/Grid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = true
button_group = ExtResource("5_mwu68")
text = "Barbarian"

[node name="BardButton" type="Button" parent="UI/Grid/ClassPanel/Grid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = true
button_group = ExtResource("5_mwu68")
text = "Bard"

[node name="ClericButton" type="Button" parent="UI/Grid/ClassPanel/Grid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = true
button_group = ExtResource("5_mwu68")
text = "Cleric"

[node name="DruidButton" type="Button" parent="UI/Grid/ClassPanel/Grid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = true
button_group = ExtResource("5_mwu68")
text = "Druid"

[node name="FighterButton" type="Button" parent="UI/Grid/ClassPanel/Grid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = true
button_group = ExtResource("5_mwu68")
text = "Fighter"

[node name="MonkButton" type="Button" parent="UI/Grid/ClassPanel/Grid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = true
button_group = ExtResource("5_mwu68")
text = "Monk"

[node name="PaladinButton" type="Button" parent="UI/Grid/ClassPanel/Grid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = true
button_group = ExtResource("5_mwu68")
text = "Paladin"

[node name="RangerButton" type="Button" parent="UI/Grid/ClassPanel/Grid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = true
button_group = ExtResource("5_mwu68")
text = "Ranger"

[node name="RogueButton" type="Button" parent="UI/Grid/ClassPanel/Grid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = true
button_group = ExtResource("5_mwu68")
text = "Rogue"

[node name="SorcererButton" type="Button" parent="UI/Grid/ClassPanel/Grid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = true
button_group = ExtResource("5_mwu68")
text = "Sorcerer"

[node name="WarlockButton" type="Button" parent="UI/Grid/ClassPanel/Grid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = true
button_group = ExtResource("5_mwu68")
text = "Warlock"

[node name="WizardButton" type="Button" parent="UI/Grid/ClassPanel/Grid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = true
button_group = ExtResource("5_mwu68")
text = "Wizard"

[node name="BackgroundPanel" type="Panel" parent="UI/Grid"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="UI/Grid/BackgroundPanel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.065
offset_top = 18.0
offset_bottom = -0.120007
grow_horizontal = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Choose your Background"
horizontal_alignment = 1

[node name="GridContainer" type="GridContainer" parent="UI/Grid/BackgroundPanel"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.085
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -0.0800018
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
columns = 3

[node name="AcolyteButton" type="Button" parent="UI/Grid/BackgroundPanel/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = true
button_group = ExtResource("6_lvp53")
text = "Acolyte"

[node name="ArtisanButton" type="Button" parent="UI/Grid/BackgroundPanel/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
button_group = ExtResource("6_lvp53")
text = "Artisan"

[node name="CharlatanButton" type="Button" parent="UI/Grid/BackgroundPanel/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
button_group = ExtResource("6_lvp53")
text = "Charlatan"

[node name="CriminalButton" type="Button" parent="UI/Grid/BackgroundPanel/GridContainer"]
layout_mode = 2
size_flags_vertical = 3
toggle_mode = true
button_group = ExtResource("6_lvp53")
text = "Criminal"

[node name="CultistButton" type="Button" parent="UI/Grid/BackgroundPanel/GridContainer"]
layout_mode = 2
toggle_mode = true
button_group = ExtResource("6_lvp53")
text = "Cultist"

[node name="EntertainerButton" type="Button" parent="UI/Grid/BackgroundPanel/GridContainer"]
layout_mode = 2
toggle_mode = true
button_group = ExtResource("6_lvp53")
text = "Entertainer"

[node name="ExileButton" type="Button" parent="UI/Grid/BackgroundPanel/GridContainer"]
layout_mode = 2
size_flags_vertical = 3
toggle_mode = true
button_group = ExtResource("6_lvp53")
text = "Exile"

[node name="FarmerButton" type="Button" parent="UI/Grid/BackgroundPanel/GridContainer"]
layout_mode = 2
toggle_mode = true
button_group = ExtResource("6_lvp53")
text = "Farmer"

[node name="FolkHeroButton" type="Button" parent="UI/Grid/BackgroundPanel/GridContainer"]
layout_mode = 2
toggle_mode = true
button_group = ExtResource("6_lvp53")
text = "Folk Hero"

[node name="GamblerButton" type="Button" parent="UI/Grid/BackgroundPanel/GridContainer"]
layout_mode = 2
size_flags_vertical = 3
toggle_mode = true
button_group = ExtResource("6_lvp53")
text = "Gambler"

[node name="GuardButton" type="Button" parent="UI/Grid/BackgroundPanel/GridContainer"]
layout_mode = 2
toggle_mode = true
button_group = ExtResource("6_lvp53")
text = "Guard"

[node name="GuildMemberButton" type="Button" parent="UI/Grid/BackgroundPanel/GridContainer"]
layout_mode = 2
toggle_mode = true
button_group = ExtResource("6_lvp53")
text = "Guild Member"

[node name="HermitButton" type="Button" parent="UI/Grid/BackgroundPanel/GridContainer"]
layout_mode = 2
size_flags_vertical = 3
toggle_mode = true
button_group = ExtResource("6_lvp53")
text = "Hermit"

[node name="MarauderButton" type="Button" parent="UI/Grid/BackgroundPanel/GridContainer"]
layout_mode = 2
toggle_mode = true
button_group = ExtResource("6_lvp53")
text = "Marauder"

[node name="NobleButton" type="Button" parent="UI/Grid/BackgroundPanel/GridContainer"]
layout_mode = 2
toggle_mode = true
button_group = ExtResource("6_lvp53")
text = "Noble"

[node name="OutlanderButton" type="Button" parent="UI/Grid/BackgroundPanel/GridContainer"]
layout_mode = 2
size_flags_vertical = 3
toggle_mode = true
button_group = ExtResource("6_lvp53")
text = "Outlander"

[node name="SageButton" type="Button" parent="UI/Grid/BackgroundPanel/GridContainer"]
layout_mode = 2
toggle_mode = true
button_group = ExtResource("6_lvp53")
text = "Sage"

[node name="SailorButton" type="Button" parent="UI/Grid/BackgroundPanel/GridContainer"]
layout_mode = 2
toggle_mode = true
button_group = ExtResource("6_lvp53")
text = "Sailor"

[node name="SoldierButton" type="Button" parent="UI/Grid/BackgroundPanel/GridContainer"]
layout_mode = 2
size_flags_vertical = 3
toggle_mode = true
button_group = ExtResource("6_lvp53")
text = "Soldier"

[node name="TraderButton" type="Button" parent="UI/Grid/BackgroundPanel/GridContainer"]
layout_mode = 2
toggle_mode = true
button_group = ExtResource("6_lvp53")
text = "Trader"

[node name="UrchinButton" type="Button" parent="UI/Grid/BackgroundPanel/GridContainer"]
layout_mode = 2
toggle_mode = true
button_group = ExtResource("6_lvp53")
text = "Urchin"

[node name="SpacePanel" type="ColorRect" parent="UI/Grid"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(1, 1, 1, 0)

[node name="MiddlePanel" type="VBoxContainer" parent="UI/Grid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8

[node name="BackButton" type="Button" parent="UI/Grid/MiddlePanel"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
text = "Back"

[node name="NextButton" type="Button" parent="UI/Grid/MiddlePanel"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
text = "Next"

[connection signal="background_changed" from="UI" to="." method="_on_ui_background_changed"]
[connection signal="class_changed" from="UI" to="." method="_on_ui_class_changed"]
[connection signal="race_changed" from="UI" to="." method="_on_ui_race_changed"]
[connection signal="toggled" from="UI/Grid/RacePanel/Grid/DwarfButton" to="UI" method="_on_dwarf_button_toggled"]
[connection signal="toggled" from="UI/Grid/RacePanel/Grid/ElfButton" to="UI" method="_on_elf_button_toggled"]
[connection signal="toggled" from="UI/Grid/RacePanel/Grid/HalflingButton" to="UI" method="_on_halfling_button_toggled"]
[connection signal="toggled" from="UI/Grid/RacePanel/Grid/HumanButton" to="UI" method="_on_human_button_toggled"]
[connection signal="toggled" from="UI/Grid/RacePanel/Grid/DragonbornButton" to="UI" method="_on_dragonborn_button_toggled"]
[connection signal="toggled" from="UI/Grid/RacePanel/Grid/GnomeButton" to="UI" method="_on_gnome_button_toggled"]
[connection signal="toggled" from="UI/Grid/RacePanel/Grid/HalfElfButton" to="UI" method="_on_half_elf_button_toggled"]
[connection signal="toggled" from="UI/Grid/RacePanel/Grid/HalfOrcButton" to="UI" method="_on_half_orc_button_toggled"]
[connection signal="toggled" from="UI/Grid/RacePanel/Grid/TieflingButton" to="UI" method="_on_tiefling_button_toggled"]
[connection signal="toggled" from="UI/Grid/ClassPanel/Grid/BarbarianButton" to="UI" method="_on_barbarian_button_toggled"]
[connection signal="toggled" from="UI/Grid/ClassPanel/Grid/BardButton" to="UI" method="_on_bard_button_toggled"]
[connection signal="toggled" from="UI/Grid/ClassPanel/Grid/ClericButton" to="UI" method="_on_cleric_button_toggled"]
[connection signal="toggled" from="UI/Grid/ClassPanel/Grid/DruidButton" to="UI" method="_on_druid_button_toggled"]
[connection signal="toggled" from="UI/Grid/ClassPanel/Grid/FighterButton" to="UI" method="_on_fighter_button_toggled"]
[connection signal="toggled" from="UI/Grid/ClassPanel/Grid/MonkButton" to="UI" method="_on_monk_button_toggled"]
[connection signal="toggled" from="UI/Grid/ClassPanel/Grid/PaladinButton" to="UI" method="_on_paladin_button_toggled"]
[connection signal="toggled" from="UI/Grid/ClassPanel/Grid/RangerButton" to="UI" method="_on_ranger_button_toggled"]
[connection signal="toggled" from="UI/Grid/ClassPanel/Grid/RogueButton" to="UI" method="_on_rogue_button_toggled"]
[connection signal="toggled" from="UI/Grid/ClassPanel/Grid/SorcererButton" to="UI" method="_on_sorcerer_button_toggled"]
[connection signal="toggled" from="UI/Grid/ClassPanel/Grid/WarlockButton" to="UI" method="_on_warlock_button_toggled"]
[connection signal="toggled" from="UI/Grid/ClassPanel/Grid/WizardButton" to="UI" method="_on_wizard_button_toggled"]
[connection signal="toggled" from="UI/Grid/BackgroundPanel/GridContainer/AcolyteButton" to="UI" method="_on_acolyte_button_toggled"]
[connection signal="toggled" from="UI/Grid/BackgroundPanel/GridContainer/ArtisanButton" to="UI" method="_on_artisan_button_toggled"]
[connection signal="toggled" from="UI/Grid/BackgroundPanel/GridContainer/CharlatanButton" to="UI" method="_on_charlatan_button_toggled"]
[connection signal="toggled" from="UI/Grid/BackgroundPanel/GridContainer/CriminalButton" to="UI" method="_on_criminal_button_toggled"]
[connection signal="toggled" from="UI/Grid/BackgroundPanel/GridContainer/CultistButton" to="UI" method="_on_cultist_button_toggled"]
[connection signal="toggled" from="UI/Grid/BackgroundPanel/GridContainer/EntertainerButton" to="UI" method="_on_entertainer_button_toggled"]
[connection signal="toggled" from="UI/Grid/BackgroundPanel/GridContainer/ExileButton" to="UI" method="_on_exile_button_toggled"]
[connection signal="toggled" from="UI/Grid/BackgroundPanel/GridContainer/FarmerButton" to="UI" method="_on_farmer_button_toggled"]
[connection signal="toggled" from="UI/Grid/BackgroundPanel/GridContainer/FolkHeroButton" to="UI" method="_on_folk_hero_button_toggled"]
[connection signal="toggled" from="UI/Grid/BackgroundPanel/GridContainer/GamblerButton" to="UI" method="_on_gambler_button_toggled"]
[connection signal="toggled" from="UI/Grid/BackgroundPanel/GridContainer/GuardButton" to="UI" method="_on_guard_button_toggled"]
[connection signal="toggled" from="UI/Grid/BackgroundPanel/GridContainer/GuildMemberButton" to="UI" method="_on_guild_member_button_toggled"]
[connection signal="toggled" from="UI/Grid/BackgroundPanel/GridContainer/HermitButton" to="UI" method="_on_hermit_button_toggled"]
[connection signal="toggled" from="UI/Grid/BackgroundPanel/GridContainer/MarauderButton" to="UI" method="_on_marauder_button_toggled"]
[connection signal="toggled" from="UI/Grid/BackgroundPanel/GridContainer/NobleButton" to="UI" method="_on_noble_button_toggled"]
[connection signal="toggled" from="UI/Grid/BackgroundPanel/GridContainer/OutlanderButton" to="UI" method="_on_outlander_button_toggled"]
[connection signal="toggled" from="UI/Grid/BackgroundPanel/GridContainer/SageButton" to="UI" method="_on_sage_button_toggled"]
[connection signal="toggled" from="UI/Grid/BackgroundPanel/GridContainer/SailorButton" to="UI" method="_on_sailor_button_toggled"]
[connection signal="toggled" from="UI/Grid/BackgroundPanel/GridContainer/SoldierButton" to="UI" method="_on_soldier_button_toggled"]
[connection signal="toggled" from="UI/Grid/BackgroundPanel/GridContainer/TraderButton" to="UI" method="_on_trader_button_toggled"]
[connection signal="toggled" from="UI/Grid/BackgroundPanel/GridContainer/UrchinButton" to="UI" method="_on_urchin_button_toggled"]
[connection signal="pressed" from="UI/Grid/MiddlePanel/BackButton" to="UI" method="_on_back_button_pressed"]
[connection signal="pressed" from="UI/Grid/MiddlePanel/NextButton" to="UI" method="_on_next_button_pressed"]
